Do not add an initial colon for every method during python import.

BUG:272972
FIXED-IN:4.12.5
(cherry picked from commit 4a07fa7060827260d60d6674ad3ab2eb17a849ed)